--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -25,11 +25,6 @@
   <mat-card-content class="p-24">
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" class="w-100">
-        <ng-container matColumnDef="#">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">#</th>
-          <td mat-cell *matCellDef="let product">{{ product.id }}</td>
-        </ng-container>
-
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom</th>
           <td mat-cell *matCellDef="let product">
@@ -108,28 +103,18 @@
             {{ product.lossPercentage }}
           </td>
         </ng-container>
-
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Description
-          </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.description }}
-          </td>
-        </ng-container>
-
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Action
           </th>
           <td mat-cell *matCellDef="let product" class="action-link">
             <a
-             
+
               class="m-r-10 cursor-pointer"
               ><i-tabler name="edit" class="icon-18"></i-tabler
             ></a>
             <a
-
+                (click)="deleteProduct(product)"
               class="m-r-10 cursor-pointer"
             >
               <i-tabler name="trash" class="icon-18"></i-tabler>
@@ -153,7 +138,7 @@
 
 
 <ng-template #dialogTemplate>
-  <mat-dialog-content style="max-width: 600px">
+  <mat-dialog-content style="max-width: 1200px">
     <h2 mat-dialog-title>Ajouter un Produit</h2>
     <form #productForm="ngForm">
       <div class="row">
@@ -205,38 +190,61 @@
         </div>
         <div class="col-lg-6">
           <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              placeholder="Unité"
-              required
-              name="unit"
+            <mat-label>Unité</mat-label>
+            <mat-select
               [(ngModel)]="productData.unit"
-            />
+              name="unit"
+              required
+            >
+              <mat-option *ngFor="let unit of units" [value]="unit">
+                {{ unit.name }}
+              </mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
         <div class="col-lg-6">
           <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              placeholder="Catégorie"
-              required
-              name="category"
+            <mat-label>Catégorie</mat-label>
+            <mat-select
               [(ngModel)]="productData.category"
-            />
+              name="category"
+              required
+            >
+              <mat-option *ngFor="let category of categorys" [value]="category">
+                {{ category.name }}
+              </mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
         <div class="col-lg-6">
           <mat-form-field appearance="outline" class="w-100">
-            <input
-              matInput
-              placeholder="Marque"
-              required
-              name="brand"
+            <mat-label>Marque</mat-label>
+            <mat-select
               [(ngModel)]="productData.brand"
-            />
+              name="brand"
+              required
+            >
+              <mat-option *ngFor="let brand of brands" [value]="brand">
+                {{ brand.name }}
+              </mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
         <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Conditionnement</mat-label>
+            <mat-select
+              [(ngModel)]="productData.conditioning"
+              name="conditioning"
+              required
+            >
+              <mat-option *ngFor="let conditioning of conditionings" [value]="conditioning">
+                {{ conditioning.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-12">
           <mat-form-field appearance="outline" class="w-100">
             <textarea
               matInput
@@ -267,4 +275,21 @@
       </div>
     </form>
   </mat-dialog-content>
+</ng-template>
+
+
+<ng-template #dialogTemplateDelete>
+  <h5 mat-dialog-title class="mat-subtitle-1">Suppression du produit</h5>
+<div mat-dialog-content class="mat-subtitle-2 lh-16">
+  Êtes-vous sûr de vouloir supprimer ce produit ?
+</div>
+<div mat-dialog-actions class="p-24 p-t-0">
+
+  <button (click)="closeDialog()" mat-flat-button color="primary" mat-dialog-close cdkFocusInitial>
+    NON
+  </button>
+
+  <button (click)="confirmDelete()" mat-stroked-button color="warn" mat-dialog-close>OUI</button>
+</div>
+
 </ng-template>
