--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -31,16 +31,6 @@
             {{ product.name }}
           </td>
         </ng-container>
-
-        <ng-container matColumnDef="unit">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Unite
-          </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.unit?.name }}
-          </td>
-        </ng-container>
-
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Categorie
@@ -50,30 +40,12 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="brand">
+        <ng-container matColumnDef="stock">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Marque
+            Stock
           </th>
           <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.brand?.name }}
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="conditioning">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Condition
-          </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.conditioning?.name }}
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Prix
-          </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
-            {{ product.price }}
+            {{ product.sotck }}
           </td>
         </ng-container>
         <ng-container matColumnDef="action">
