--- a/src/app/layouts/full/vertical/header/header.component.html
+++ b/src/app/layouts/full/vertical/header/header.component.html
@@ -231,16 +231,15 @@
         <img src="/assets/images/profile/user-1.jpg" class="rounded-circle" width="56" />
         <div class="m-l-16">
           <h6 class="f-s-14 f-w-600 m-0 mat-subtitle-1 d-flex align-items-center">
-            David McMichael
-            <span class="f-s-14 d-block text-success m-l-4">Pro</span>
+            {{ user.nom }}  {{ user.prenom }}
           </h6>
-          <span> david&#64;wrappixel.com </span>
+          <span> {{ user.login }}</span>
         </div>
       </div>
     </div>
     <div class="p-x-32 p-b-16">
       @for(profile of profiledd; track profile.title) {
-      <a class="p-8 text-decoration-none d-block text-hover-primary" [routerLink]="[profile.link]">
+      <a class="p-8 text-decoration-none d-block text-hover-primary" (click)="profile.click">
         <div class="d-flex align-items-center">
           <h5 class="f-s-14 f-w-600 m-0 textprimary mat-subtitle-1 hover-text">
             {{ profile.title }}
@@ -251,6 +250,14 @@
         </div>
       </a>
       }
+
+      <a class="p-8 text-decoration-none d-block text-hover-primary" (click)="logout()">
+        <div class="d-flex align-items-center">
+          <h5 class="f-s-14 f-w-600 m-0 textprimary mat-subtitle-1 hover-text">
+            Deconnexion
+          </h5>
+        </div>
+      </a>
     </div>
   </mat-menu>
 </mat-toolbar>
