--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -1,1 +1,70 @@
-<p>catalogue-de-prix works!</p>
+<mat-card class="cardWithShadow">
+  <mat-card-content class="p-24">
+    <div class="row justify-content-between gap-16">
+      <div class="col-lg-4">
+        <mat-form-field appearance="outline" class="w-100 hide-hint">
+          <input [(ngModel)]="motRecherche"
+            matInput
+            placeholder="Rechercher un produit"
+            (keyup)="recherche()"
+          />
+          <mat-icon matSuffix>
+            <i-tabler name="search" class="icon-20"></i-tabler>
+          </mat-icon>
+        </mat-form-field>
+      </div>
+      <div class="col-lg-4 d-flex align-items-center justify-content-end">
+        <button mat-flat-button (click)="openDialogAdd()" color="primary">
+          Ajouter un Produit
+        </button>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
+<mat-card class="cardWithShadow">
+  <mat-card-content class="p-24">
+    <div class="table-responsive">
+      <table mat-table [dataSource]="dataSource" class="w-100">
+        <ng-container matColumnDef="nom produit">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom du produit</th>
+          <td mat-cell *matCellDef="let price">
+            {{ price?.product?.name }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="categorie">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Catégorie
+          </th>
+          <td mat-cell *matCellDef="let price" class="f-s-14">
+            {{ price?.product?.category?.name }}
+          </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Action
+          </th>
+          <td mat-cell *matCellDef="let price" class="action-link">
+            <a
+            (click)="openDialogDetails(price)"
+              class="m-r-10 cursor-pointer"
+              ><i-tabler name="eye" class="icon-18"></i-tabler
+            ></a>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <mat-paginator
+      [length]="totalRows"
+      [pageSize]="rows"
+      [pageSizeOptions]="[10, 20, 30]"
+        showFirstLastButtons
+      (page)="onPageChange($event)">
+      </mat-paginator>
+    </div>
+  </mat-card-content>
+</mat-card>
