--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -1,11 +1,11 @@
 <mat-card class="cardWithShadow">
   <mat-card-content class="p-24">
     <div class="row justify-content-between gap-16">
-      <div class="col-lg-4">
+      <div class="col-lg-12">
         <mat-form-field appearance="outline" class="w-100 hide-hint">
           <input [(ngModel)]="motRecherche"
             matInput
-            placeholder="Rechercher un produit"
+            placeholder="Rechercher"
             (keyup)="recherche()"
           />
           <mat-icon matSuffix>
@@ -13,11 +13,11 @@
           </mat-icon>
         </mat-form-field>
       </div>
-      <div class="col-lg-4 d-flex align-items-center justify-content-end">
+      <!-- <div class="col-lg-4 d-flex align-items-center justify-content-end">
         <button mat-flat-button (click)="openDialogAdd()" color="primary">
           Ajouter un Produit
         </button>
-      </div>
+      </div> -->
     </div>
   </mat-card-content>
 </mat-card>
