--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -326,14 +326,11 @@
 
               <ng-template pTemplate="header">
                   <tr>
-                      <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon field="reference"></p-sortIcon></th>
-                      <th pSortableColumn="shop" pColumnFilter="shop">Boutique<p-sortIcon field="shop"></p-sortIcon></th>
-
-                      <th pSortableColumn="datePurchase" pColumnFilter="datePurchase">Date Approvisionnement<p-sortIcon field="datePurchase"></p-sortIcon></th>
-
+                    <th pSortableColumn="datePurchase" pColumnFilter="datePurchase">Date Approvisionnement<p-sortIcon field="datePurchase"></p-sortIcon></th>
+                      <th pSortableColumn="shop" pColumnFilter="shop">Fournisseur<p-sortIcon field="shop"></p-sortIcon></th>
                       <th pSortableColumn="montant" pColumnFilter="montant">Montant<p-sortIcon field="montant"></p-sortIcon></th>
-
                       <th pSortableColumn="entryDate" pColumnFilter="entryDate">Date saisie<p-sortIcon field="entryDate"></p-sortIcon></th>
+                      <th pColumnFilter="entryDate">Actions</th>
 
                       <th></th>
                       <!--<th></th>-->
@@ -343,12 +340,8 @@
               </ng-template>
               <ng-template pTemplate="body" let-purchase>
                   <tr  class="cursor-pointer">
-                    <td (click)="show($event,purchase)"  style="width: 35%; min-width: 8rem;">{{purchase.reference}}</td>
-                    <td (click)="show($event,purchase)" style="width: 35%; min-width: 8rem;">{{purchase?.shop?.name}}</td>
-                    <!--<td (click)="show($event,purchase)" style="width: 35%; min-width: 8rem;">{{purchase?.address?.address?.label}}</td>-->
-
                     <td (click)="show($event,purchase)"  style="width: 35%; min-width: 8rem;">{{purchase.datePurchase | date:'dd-MM-yyyy HH:mm'}}</td>
-
+                    <td (click)="show($event,purchase)" style="width: 35%; min-width: 8rem;">{{purchase?.shop?.name}}</td>
                     <td (click)="show($event,purchase)"  style="width: 35%; min-width: 8rem;">{{purchase.montant}} {{purchase?.currency?.name}}</td>
                     <td (click)="show($event,purchase)"  style="width: 35%; min-width: 8rem;">{{purchase.entryDate | date:'dd-MM-yyyy HH:mm'}}</td>
 
