--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -27,7 +27,7 @@
       <table mat-table [dataSource]="dataSource" class="w-100">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom</th>
-          <td mat-cell *matCellDef="let product">
+          <td (click)="show($event,product)" mat-cell *matCellDef="let product">
             {{ product.name }}
           </td>
         </ng-container>
@@ -35,7 +35,7 @@
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Categorie
           </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
+          <td (click)="show($event,product)" mat-cell *matCellDef="let product" class="f-s-14">
             {{ product.category?.name }}
           </td>
         </ng-container>
@@ -44,7 +44,7 @@
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Stock
           </th>
-          <td mat-cell *matCellDef="let product" class="f-s-14">
+          <td (click)="show($event,product)" mat-cell *matCellDef="let product" class="f-s-14">
             {{ product.sotck }}
           </td>
         </ng-container>
