--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -83,3 +83,75 @@
     </div>
   </mat-card-content>
 </mat-card>
+
+
+<!-- add -->
+<ng-template  #dialogTemplate>
+  <mat-dialog-content style="max-width: 1200px; max-height: 600px;">
+     <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
+      <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
+        <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler
+        >Ajout d'un fournisseur
+      </h5>
+    </div>
+    <form  #shopForm="ngForm">
+      <div class="row">
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Nom du Fournisseur"
+              required
+              name="name"
+              [(ngModel)]="shopData.name"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="acronym"
+              required
+              name="acronym"
+              [(ngModel)]="shopData.acronym"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              type="text"
+              placeholder="addresse"
+              required
+              name="addresse"
+              [(ngModel)]="addresse.label"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Categorie
+          </th>
+          <td mat-cell *matCellDef="let countrys" class="f-s-14">
+            {{ countrys.name }}
+          </td>
+        </ng-container>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-lg-6">
+          <button mat-flat-button color="primary" class="large-button" (click)="addProduct()" [disabled]="!shopForm.valid"> Ajouter </button>
+        </div>
+        <div class="col-lg-6">
+          <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
+        </div>
+      </div>
+
+    </form>
+  </mat-dialog-content>
+</ng-template>
+
