--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -87,7 +87,7 @@
 
 <!-- add -->
 <ng-template  #dialogTemplate>
-  <mat-dialog-content style="max-width: 1200px; max-height: 600px;">
+  <mat-dialog-content style="max-width: 1200px; max-height: 400px;">
      <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
       <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
         <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler
@@ -131,20 +131,47 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Categorie
-          </th>
-          <td mat-cell *matCellDef="let countrys" class="f-s-14">
-            {{ countrys.name }}
-          </td>
-        </ng-container>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Pays</mat-label>
+            <mat-select
+              [(ngModel)]="addresse.country"
+              name="brand"
+              required
+            >
+              <mat-option *ngFor="let country of countrys" [value]="country">
+                {{ country.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Ville"
+              required
+              name="city"
+              [(ngModel)]="addresse.city"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Geolocation"
+              required
+              name="geolocation"
+              [(ngModel)]="addresse.geolocation"
+            />
+          </mat-form-field>
         </div>
       </div>
       <div class="row">
 
         <div class="col-lg-6">
-          <button mat-flat-button color="primary" class="large-button" (click)="addProduct()" [disabled]="!shopForm.valid"> Ajouter </button>
+          <button mat-flat-button color="primary" class="large-button" (click)="save()" [disabled]="!shopForm.valid"> Ajouter </button>
         </div>
         <div class="col-lg-6">
           <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
