--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -57,7 +57,7 @@
           </th>
           <td mat-cell *matCellDef="let shop" class="action-link">
             <a
-            (click)="openDialogEdit(shop)"
+            (click)="openDialogEdit(shop,addresse)"
               class="m-r-10 cursor-pointer"
               ><i-tabler name="edit" class="icon-18"></i-tabler
             ></a>
@@ -182,3 +182,102 @@
   </mat-dialog-content>
 </ng-template>
 
+
+<!-- add -->
+<ng-template  #dialogTemplateEdit>
+  <mat-dialog-content style="max-width: 1200px; max-height: 400px;">
+     <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
+      <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
+        <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler
+        >Modification d'un fournisseur
+      </h5>
+    </div>
+    <form  #shopForm="ngForm">
+      <div class="row">
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Nom du Fournisseur"
+              required
+              name="name"
+              [(ngModel)]="shopData.name"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="acronym"
+              required
+              name="acronym"
+              [(ngModel)]="shopData.acronym"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              type="text"
+              placeholder="addresse"
+              required
+              name="addresse"
+              [(ngModel)]="addresse.label"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Pays</mat-label>
+            <mat-select
+              [(ngModel)]="addresse.country"
+              name="brand"
+              required
+            >
+              <mat-option *ngFor="let country of countrys" [value]="country">
+                {{ country.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Ville"
+              required
+              name="city"
+              [(ngModel)]="addresse.city"
+            />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-form-field appearance="outline" class="w-100">
+            <input
+              matInput
+              placeholder="Geolocation"
+              required
+              name="geolocation"
+              [(ngModel)]="addresse.geolocation"
+            />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-lg-6">
+          <button mat-flat-button color="primary" class="large-button" (click)="update()" [disabled]="!shopForm.valid"> Modifier </button>
+        </div>
+        <div class="col-lg-6">
+          <button mat-stroked-button color="warn" class="large-button m-l-8" (click)="closeDialog()"> Annuler </button>
+        </div>
+      </div>
+
+    </form>
+  </mat-dialog-content>
+</ng-template>
+<p-toast position="top-center" key="tc"></p-toast>
+<p-toast key="shop"></p-toast>
