--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -121,7 +121,7 @@
             <input
               matInput
               type="number"
-              placeholder="Prix"
+              placeholder="Prix Devise"
               required
               name="price"
               [(ngModel)]="productData.price"
